# SoftElo

./: README.md  export_release_data.py  make_tables.py  plot_results.py  pyproject.toml  run_demo.py
data/: manifest.csv  sample_annotations.csv
softelo_minimal/: __init__.py  core.py
