[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "softelo-minimal"
version = "0.1.0"
description = "Minimal Hard-Elo and Soft-Elo reproducibility package"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["softelo_minimal*"]
